# portfolio

./: .editorconfig  .gitignore  README.md  plan-frontendMinimal.prompt.md  pyproject.toml  test_api_integration.py  test_tushare.py
.github/: copilot-instructions.md  pull_request_template.md
backend/app/: config.py  main.py
backend/app/api/: analyses.py  financials.py  holdings.py  jobs.py  portfolios.py  prices.py  stocks.py  valuations.py
backend/app/db/: models.py  schemas.py  session.py
backend/app/services/: analysis_engine.py  deepseek_service.py  tushare_client.py
backend/app/tasks/: __init__.py  refresh.py
docs/: PRD.md  deveploer.md  product-designer.md
frontend/: pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/console/: page.tsx
frontend/src/app/portfolios/[id]/: page.tsx
frontend/src/app/stocks/: page.tsx
frontend/src/app/stocks/[ts_code]/: page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx  textarea.tsx
frontend/src/lib/: api.ts  types.ts
